2010-06-01  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/status_monitor.php: Fixed the width
	of the combos avoid displace objects.
	For bug: 3008756

2010-06-01  Sergio Martin <sergio.martin@artica.es>

	* godmode/groups/group_list.php: Change the way of 
	get the group incons to function print_group_icon.

2010-06-01  Raúl Mateos <raulofpandora@gmail.com>

	* godmode/alerts/alert_list.list.php,
	godmode/agentes/configurar_agente.php,
	godmode/agentes/module_manager.php,
	godmode/agentes/module_manager_editor.php,
	godmode/agentes/agent_template.php: Updated headers.

2010-06-01  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/planned_downtime.php: Fixed the
	value of time into update downtime for bug: 3004049

2010-06-01  Miguel de Dios  <miguel.dedios@artica.es>

	* general/license/pandora_info_es_es.html,
	general/license/pandora_info_en.html, general/license/pandora_info_ca.html,
	general/license/pandora_info_es_la.html,
	general/license/pandora_info_fr.html: fixed unclose html tags in source
	code, the eclipse warm to me.

2010-06-01  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions.php,
	godmode/reporting/reporting_builder.item_editor.php: deleted item type
	of agent_detailed.

2010-06-01  Miguel de Dios  <miguel.dedios@artica.es>

	* DEBIAN/conffiles: added file config.php as conf file for package Debian.
	 
	* DEBIAN/make_deb_package.sh: changed the source to "touch" conf file.

	* index.php: fixed the tests for config.php, now check if empty file then
	call installer.php. 

2010-06-01  Sergio Martin <sergio.martin@artica.es>

	* include/functions_visual_map.php: Fixed a
	undefined variable notice in visual console
	for bug: 3007450

2010-06-01  Sergio Martin <sergio.martin@artica.es>

	* include/functions_ui.php: Fixed the group
	icon size to 16x16 pixels by default.
	Bug: 3008508

2010-06-01  Sergio Martin <sergio.martin@artica.es>

	* godmode/users/configure_user.php: Fixed the edition